1.11.0 - ????-??-??
  - General changes/additions
    * augmatch: add a --quiet option; make the exit status useful to tell
                whether there was a match or not
  - API changes
    * aug_source did not in fact return the source; and always returned
      NULL for that. That has been fixed.
  - Lens changes/additions
    * Chrony: add new options supported in chrony 3.2 and 3.3 (Miroslav Lichvar)
    * Dhclient: fix parsing of append/prepend and similar directives
                (John Morrissey)
    * Grub: tolerate some invalid entries. Those invalid entries
            get mapped to '#error' nodes
    * Httpd: accept comments with whitespace right after a tag
             opening a section (Issue #577)
    * Json: allow escaped slashes in strings (Issue #557)
    * Multipath: accept regular expressions for devnode, wwid, and property
      in blacklist and blacklist_exceptions sections (Issue #564)
    * Nginx: parse /etc/nginx/sites-enabled (plumbeo)
             allow semicolons inside double quoted strings in
             simple directives, and allow simple directives without
             an argument (Issue #566)
    * Redis: accept the 'bind' statement with multiple IP addresses
             (yannh) (Issue #194)
    * Rsyslog: support include() directive introduced in rsyslog 8.33
    * Systemd: do not try to treat *.d or *.wants directories as
               configuration files (Issue #548)

1.10.1 - 2018-01-29
  - API changes
    * Fix a symbol versioning mistake in libfa that unnecessarily broke ABI

1.10.0 - 2018-01-25
  DO NOT USE THIS RELEASE, USE 1.10.1 INSTEAD

  - General changes/additions
    * New CLI utility 'augmatch' to print the tree for a file and select
      some of its contents
    * New command 'count' in augtool
    * New function 'not(bool) -> bool' for path expressions
    * The path expression 'label[. = "value"]' can now be written more
      concisely as 'label["value"]'
  - API changes